# 3D-From-Scratch

./: CMakeLists.txt  README.md  output.ppm
benchmarks/: plot_line.cpp
include/: camera.hpp  clipper.hpp  graphics.hpp  importer.hpp  model.hpp  renderer.hpp  scene.hpp  texture.hpp  timer.hpp
src/: clipper.cpp  importer.cpp  main.cpp  renderer.cpp
tests/: foo.cpp
